# introspectre

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  config.toml  test.json
src/: analysis.rs  audit.rs  cli.rs  config.rs  io_ops.rs  main.rs  report.rs  types.rs
src/analysis/: access_control.rs  dos.rs  information_exposure.rs  jwt.rs  jwt_tests.rs  mod.rs  utils.rs
src/audit/: mod.rs  utils.rs
src/audit/probes/: alias_dos.rs  batching.rs  complexity.rs  error_disclosure.rs  idor.rs  mod.rs  ssrf.rs  typename.rs  unauth.rs
