[package]
name = "introspectre"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22.1"
reqwest = { version = "0.13.3", features = ["json"] }
futures = "0.3.32"
